// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render toggled 1`] = `
<div class="SidebarToggle"><button class="toggle">
    <v-icon-stub name="chevron-left"></v-icon-stub>
  </button></div>
`;

exports[`render untoggled 1`] = `
<div class="SidebarToggle"><button class="toggle">
    <v-icon-stub name="ellipsis-v"></v-icon-stub>
  </button></div>
`;
